<resources>
    <string name="app_name">Removie</string>
    <string name="title">Removie</string>
    <string name="subtitle">Find Your Movies Now</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="synopsis">Synopsis</string>
    <string name="photogallery">Photogallery</string>
    <string name="videos_and_trailers">Videos and Trailers</string>
    <string name="release">Release</string>
    <string name="cast">Cast</string>
    <string name="top_rated">Top Rated</string>
    <string name="search_title">Search Movie Title</string>
    <string name="search">Search</string>
    <string name="find_movie_title">Find movie title</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="title_movie">Title : </string>
    <string name="running_time">Running Time : </string>
    <string name="release_date">Release Date :</string>
    <string name="language">Language :</string>
    <string name="favorite_button">favorite button</string>
    <string name="rating">rating</string>
    <string name="backdrop">backdrop</string>
    <string name="logo">logo</string>
    <string name="no_more_video_result_found">No more video result found..</string>
    <string name="poster">poster</string>
    <string name="no_internet">no internet</string>
    <string name="whoops">Whoops !</string>
    <string name="no_internet_connection_found_check_your_connection_or_try_again">No internet connection found. check your connection or try again</string>
</resources>
