<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/movie_detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            tools:src="@drawable/backdrop" />

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_24"
            tools:text="Re: Zero kara Hajimeru Isekai Seikatsu - Memory Snow" />

        <TextView
            android:id="@+id/movie_detail_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_12"
            tools:text="Action, Comedy, Adventure" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="#407f8c8d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16">

            <TextView
                android:id="@+id/movie_detail_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sp_24"
                tools:text="2019" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_26"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/ic_star" />

            <ImageButton
                android:id="@+id/movie_detail_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/background"
                android:gravity="center"
                android:src="@drawable/ic_favorite_border" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/release"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/movie_detail_vote_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18"
                tools:text="8.0/10" />

            <TextView
                android:id="@+id/favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18"
                tools:text="Add Favorite" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="#407f8c8d" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/synopsis"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/movie_detail_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14"
            tools:text="The X-Men face their most formidable and powerful foe when one of their own, Jean Grey, starts to spiral out of control. During a rescue mission in outer space, Jean is nearly killed when she's hit by a mysterious cosmic force. Once she returns home, this force not only makes her infinitely more powerful, but far more unstable. The X-Men must now band together to save her soul and battle aliens that want to use Grey's new abilities to rule the galaxy." />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="#407f8c8d" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/photogallery"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_detail_images_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:nestedScrollingEnabled="false" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="#407f8c8d" />


        <!--video-->
        <LinearLayout
            android:id="@+id/movie_detail_video_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/videos_and_trailers"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_detail_video_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:background="@color/background"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>